# start-py-project

./: pyproject.toml
src/start_py_project/: cli.py
src/start_py_project/templates/: base_ignore.tmpl  gitignore_extra.tmpl  install_remote.sh.tmpl  sync_to.sh.tmpl
