[project]
name = "start-py-project"
version = "0.1.0"
description = "Bootstrap a uv-based Python project (src layout), init git, and add helper scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
start-py-project = "start_py_project.cli:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
